// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Landing renders the active tab image 1`] = `
<img
  alt="banner"
  class="image"
  draggable="false"
  src="Any image"
  style="max-height: 100%; max-width: 100%;"
/>
`;

exports[`Landing renders the active tab prompt 1`] = `
<h1
  class="prompt"
>
  This is a 
  <span
    class="green"
  >
    prompt
  </span>
</h1>
`;

exports[`Landing when a different tab is selected renders the selected tab image 1`] = `
<img
  alt="banner"
  class="image"
  draggable="false"
  src="Second image"
  style="max-height: 100%; max-width: 100%;"
/>
`;

exports[`Landing when a different tab is selected renders the selected tab prompt 1`] = `
<h1
  class="prompt"
>
  This is the prompt for the 
  <span
    class="green"
  >
    second
  </span>
   tab
</h1>
`;
